--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["@babel/preset-env"],
-    "plugins": []
+    "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-proposal-export-default-from"]
 }
