--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "merge-long-picture",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./libs/index.js",
   "bin": {
@@ -19,10 +19,10 @@
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-transform-async-to-generator": "^7.1.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/runtime": "^7.1.5"
+    "@babel/preset-env": "^7.1.6"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.5",
     "async-array-methods": "^2.1.0",
     "canvas": "^2.1.0",
     "colors": "^1.3.2",
@@ -30,10 +30,7 @@
     "image-info": "0.0.2",
     "imagemin": "^6.0.0",
     "imagemin-pngquant": "^6.0.0",
-    "images": "^3.0.1",
     "math": "0.0.3",
-    "moment": "^2.22.2",
-    "nanoid": "^2.0.0",
-    "string-hash": "^1.1.3"
+    "nanoid": "^2.0.0"
   }
 }
