--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "merge-long-picture",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "./libs/index.js",
   "bin": {
@@ -27,6 +27,7 @@
     "canvas": "^2.1.0",
     "colors": "^1.3.2",
     "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
     "image-info": "0.0.2",
     "imagemin": "^6.0.0",
     "imagemin-pngquant": "^6.0.0",
